--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "engines": {
     "node": ">=0.4.0"
   },
+  "main": "./public/chosen.jquery.js",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
